# tonic

./: Cargo.toml  _perfnotes.txt
grpc/: Cargo.toml
grpc/benches/lb_apis/: chi_pol_batched.rs  chi_pol_broadcast.rs  chi_pol_cb.rs  chi_pol_single.rs  child_policy.rs  del_pol_batched.rs  del_pol_broadcast.rs  del_pol_cb.rs  del_pol_single.rs  delegating_policy.rs  main.rs
grpc/examples/: inmemory.rs
grpc/src/: attributes.rs  lib.rs  rt.rs  service.rs
grpc/src/client/: channel.rs  mod.rs  service_config.rs  subchannel.rs  subchannel_pool.rs
grpc/src/client/load_balancing/: child_manager.rs  child_manager_batched.rs  child_manager_broadcast.rs  child_manager_cb.rs  child_manager_single.rs  mod.rs  pick_first.rs  registry.rs
grpc/src/client/name_resolution/: mod.rs  registry.rs
grpc/src/client/transport/: mod.rs  registry.rs
grpc/src/inmemory/: mod.rs
grpc/src/server/: mod.rs
tests/integration_tests/tests/: streams.rs
