[package]
name = "grpc"
version = "0.9.0"
edition = "2021"
authors = ["gRPC Authors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
once_cell = "1.19.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["sync", "full" ] }
tonic = "0.11.0"
url = "2.5.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "lb_apis"
harness = false